HtmlVideoElementCapturerSource: Add opacity/alpha source support

HtmlVideoElementCapturerSource, the impl of <video>.captureStream(),
ignores the opacity/transparency of the source on ToT. causing the
bug below.  This CL adds support for I420A in the said Source, and
for that also adds an IsOpaque() method to WebMediaPlayer and to
its WMPImpl.

Bug: 902205
Change-Id: Ic14119b7df54ded4bee9544df9de90a3628db6df
Reviewed-on: https://chromium-review.googlesource.com/c/1359513
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613764}
Former-commit-id: fb63a5791874c6398f709edd77b35dfd1b8efad6