media/blink/webmediaplayer_impl.h
@@ -293,6 +293,7 @@ class MEDIA_BLINK_EXPORT WebMediaPlayerImpl
 
   bool DidLazyLoad() const override;
   void OnBecameVisible() override;
+  bool IsOpaque() const override;
 
   // Called from WebMediaPlayerCast.
   // TODO(hubbe): WMPI_CAST make private.
