content/renderer/media_capture_from_element/html_video_element_capturer_source_unittest.cc
@@ -12,11 +12,14 @@
 #include "base/run_loop.h"
 #include "base/test/scoped_task_environment.h"
 #include "base/threading/thread_task_runner_handle.h"
+#include "cc/paint/paint_canvas.h"
+#include "cc/paint/paint_flags.h"
 #include "media/base/limits.h"
 #include "testing/gmock/include/gmock/gmock.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "third_party/blink/public/platform/scheduler/test/renderer_scheduler_test_support.h"
 #include "third_party/blink/public/platform/web_media_player.h"
+#include "third_party/blink/public/platform/web_rect.h"
 #include "third_party/blink/public/platform/web_string.h"
 
 using ::testing::_;
@@ -88,7 +91,7 @@ class MockWebMediaPlayer : public blink::WebMediaPlayer,
   uint64_t VideoDecodedByteCount() const override { return 0; }
 
   void Paint(cc::PaintCanvas* canvas,
-             const blink::WebRect& paint_rectangle,
+             const blink::WebRect& rect,
              cc::PaintFlags&,
              int already_uploaded_id,
              VideoFrameUploadMetadata* out_metadata) override {
@@ -97,9 +100,12 @@ class MockWebMediaPlayer : public blink::WebMediaPlayer,
     // but I don't think that'll be easy/useful/robust, so just let go here.
     return;
   }
+  bool IsOpaque() const override { return is_video_opaque_; }
+
+  bool is_video_opaque_ = true;
 };
 
-class HTMLVideoElementCapturerSourceTest : public testing::Test {
+class HTMLVideoElementCapturerSourceTest : public testing::TestWithParam<bool> {
  public:
   HTMLVideoElementCapturerSourceTest()
       : scoped_task_environment_(
@@ -121,6 +127,10 @@ class HTMLVideoElementCapturerSourceTest : public testing::Test {
   MOCK_METHOD1(DoOnRunning, void(bool));
   void OnRunning(bool state) { DoOnRunning(state); }
 
+  void SetVideoPlayerOpacity(bool opacity) {
+    web_media_player_->is_video_opaque_ = opacity;
+  }
+
  protected:
   // We need some kind of message loop to allow |html_video_capturer_| to
   // schedule capture events.
@@ -136,8 +146,8 @@ TEST_F(HTMLVideoElementCapturerSourceTest, ConstructAndDestruct) {}
 
 // Checks that the usual sequence of GetPreferredFormats() ->
 // StartCapture() -> StopCapture() works as expected and let it capture two
-// frames.
-TEST_F(HTMLVideoElementCapturerSourceTest, GetFormatsAndStartAndStop) {
+// frames, that are tested for format vs the expected source opacity.
+TEST_P(HTMLVideoElementCapturerSourceTest, GetFormatsAndStartAndStop) {
   InSequence s;
   media::VideoCaptureFormats formats =
       html_video_capturer_->GetPreferredFormats();
@@ -151,6 +161,9 @@ TEST_F(HTMLVideoElementCapturerSourceTest, GetFormatsAndStartAndStop) {
   params.requested_format = formats[0];
 
   EXPECT_CALL(*this, DoOnRunning(true)).Times(1);
+
+  const bool is_video_opaque = GetParam();
+  SetVideoPlayerOpacity(is_video_opaque);
 
   base::RunLoop run_loop;
   base::Closure quit_closure = run_loop.QuitClosure();
@@ -172,9 +185,18 @@ TEST_F(HTMLVideoElementCapturerSourceTest, GetFormatsAndStartAndStop) {
 
   EXPECT_EQ(0u, first_frame->timestamp().InMilliseconds());
   EXPECT_GT(second_frame->timestamp().InMilliseconds(), 30u);
+  if (is_video_opaque)
+    EXPECT_EQ(media::PIXEL_FORMAT_I420, first_frame->format());
+  else
+    EXPECT_EQ(media::PIXEL_FORMAT_I420A, first_frame->format());
+
   html_video_capturer_->StopCapture();
   Mock::VerifyAndClearExpectations(this);
 }
+
+INSTANTIATE_TEST_CASE_P(,
+                        HTMLVideoElementCapturerSourceTest,
+                        ::testing::Bool());
 
 // When a new source is created and started, it is stopped in the same task
 // when cross-origin data is detected. This test checks that no data is
@@ -205,6 +227,66 @@ TEST_F(HTMLVideoElementCapturerSourceTest,
   html_video_capturer_->StopCapture();
   base::RunLoop().RunUntilIdle();
 
+  Mock::VerifyAndClearExpectations(this);
+}
+
+// Verify that changes in the opacicty of the source WebMediaPlayer are followed
+// by corresponding changes in the format of the captured VideoFrame.
+TEST_F(HTMLVideoElementCapturerSourceTest, AlphaAndNot) {
+  InSequence s;
+  media::VideoCaptureFormats formats =
+      html_video_capturer_->GetPreferredFormats();
+  media::VideoCaptureParams params;
+  params.requested_format = formats[0];
+
+  {
+    SetVideoPlayerOpacity(false);
+
+    base::RunLoop run_loop;
+    base::Closure quit_closure = run_loop.QuitClosure();
+    scoped_refptr<media::VideoFrame> frame;
+    EXPECT_CALL(*this, DoOnRunning(true)).Times(1);
+    EXPECT_CALL(*this, DoOnDeliverFrame(_, _))
+        .WillOnce(
+            DoAll(SaveArg<0>(&frame), RunClosure(std::move(quit_closure))));
+    html_video_capturer_->StartCapture(
+        params,
+        base::Bind(&HTMLVideoElementCapturerSourceTest::OnDeliverFrame,
+                   base::Unretained(this)),
+        base::Bind(&HTMLVideoElementCapturerSourceTest::OnRunning,
+                   base::Unretained(this)));
+    run_loop.Run();
+
+    EXPECT_EQ(media::PIXEL_FORMAT_I420A, frame->format());
+  }
+  {
+    SetVideoPlayerOpacity(true);
+
+    base::RunLoop run_loop;
+    base::Closure quit_closure = run_loop.QuitClosure();
+    scoped_refptr<media::VideoFrame> frame;
+    EXPECT_CALL(*this, DoOnDeliverFrame(_, _))
+        .WillOnce(
+            DoAll(SaveArg<0>(&frame), RunClosure(std::move(quit_closure))));
+    run_loop.Run();
+
+    EXPECT_EQ(media::PIXEL_FORMAT_I420, frame->format());
+  }
+  {
+    SetVideoPlayerOpacity(false);
+
+    base::RunLoop run_loop;
+    base::Closure quit_closure = run_loop.QuitClosure();
+    scoped_refptr<media::VideoFrame> frame;
+    EXPECT_CALL(*this, DoOnDeliverFrame(_, _))
+        .WillOnce(
+            DoAll(SaveArg<0>(&frame), RunClosure(std::move(quit_closure))));
+    run_loop.Run();
+
+    EXPECT_EQ(media::PIXEL_FORMAT_I420A, frame->format());
+  }
+
+  html_video_capturer_->StopCapture();
   Mock::VerifyAndClearExpectations(this);
 }
 
